Sun Oct 21 13:38:09 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (purge_missing): If there is no content, that
	  might just be because the key was already freed while purging an
	  earlier multi key, so skip to the next key rather than breaking
	  out of the loop.

Sun Oct 21 13:33:38 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Check for gdbm_exists in DBLIBS as well as LIBS.
	  Remove unused gdbm_setopt check.

Sun Oct 21 01:25:00 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac (AC_INIT): Pass a BUG-REPORT argument.

Sat Oct 20 18:27:13 BST 2007  Colin Watson  <cjwatson@debian.org>

	* gnulib/lib/xmalloc.c (xstrdup): Explicitly tolerate a NULL
	  argument, returning NULL in that case. (Also sent to Gnulib
	  upstream.)
	* gnulib/lib/xmalloc.patch: Add, with the above change in patch
	  format.
	* autogen.sh: Apply xmalloc.patch after updating Gnulib.

Sat Oct 20 18:20:07 BST 2007  Colin Watson  <cjwatson@debian.org>

	* gnulib/lib/asnprintf.c, gnulib/lib/asprintf.c,
	  gnulib/lib/float+.h, gnulib/lib/float_.h,
	  gnulib/lib/printf-args.c, gnulib/lib/printf-args.h,
	  gnulib/lib/printf-parse.c, gnulib/lib/printf-parse.h,
	  gnulib/lib/size_max.h, gnulib/lib/stdio_.h,
	  gnulib/lib/vasnprintf.c, gnulib/lib/vasnprintf.h,
	  gnulib/lib/vasprintf.c, gnulib/lib/xasprintf.c,
	  gnulib/lib/xsize.h, gnulib/lib/xvasprintf.c,
	  gnulib/lib/xvasprintf.h, gnulib/m4/eoverflow.m4,
	  gnulib/m4/float_h.m4, gnulib/m4/intmax_t.m4,
	  gnulib/m4/inttypes_h.m4, gnulib/m4/size_max.m4,
	  gnulib/m4/stdarg.m4, gnulib/m4/stdint_h.m4, gnulib/m4/stdio_h.m4,
	  gnulib/m4/vasnprintf.m4, gnulib/m4/vasprintf.m4,
	  gnulib/m4/wchar_t.m4, gnulib/m4/xsize.m4, gnulib/m4/xvasprintf.m4:
	  Import the Gnulib xvasprintf module.
	* .bzrignore: Update.

	* libdb/mydbm.h: Add MYDBM_RESET_DSIZE and MYDBM_SET convenience
	  macros, to obsolete most direct uses of MYDBM_SET_DPTR and
	  MYDBM_DSIZE. Code that just wants to put a string in a datum