@@ -46,6 +46,7 @@ man/*.UTF-8/man8/*.8
 man/man1/*.1
 man/man5/*.5
 man/man8/*.8
+man/replace.sed
 manual/Makefile
 manual/man_db.cat
 manual/man_db.dvi
