@@ -1,3 +1,13 @@
+Sun Oct 21 17:59:13 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* man/Rules.man (SED_ARGS): Move to ...
+	* man/replace.sin: ... here.
+	* man/Rules.man (.man1.1, .man5.5, .man8.8): Use replace.sed to
+	  shorten build output.
+	* configure.ac (AC_CONFIG_FILES): Generate man/replace.sed from
+	  man/replace.sin.
+	* .bzrignore: Ignore man/replace.sed.
+
 Sun Oct 21 13:38:09 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/check_mandirs.c (purge_missing): If there is no content, that
